<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".Signup_Form">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/hint"
            android:layout_marginTop="5dp"
            app:counterEnabled="true"
            app:counterMaxLength="19"
            app:errorEnabled="true"
            >

            <EditText
                android:id="@+id/text_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_first_and_last_name"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/hint"
            android:layout_marginTop="5dp"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:errorEnabled="true"
            >

            <EditText
                android:id="@+id/text_input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_username"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/hint"
            android:layout_marginTop="5dp"
            app:errorEnabled="true"
            >

            <EditText
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="Autofill,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/hint"
            android:layout_marginTop="5dp"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:errorEnabled="true"
            >

            <EditText
                android:id="@+id/text_input_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/occupation"
                android:ems="10"
                android:inputType="text"
                android:textSize="20sp"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/hint"
            android:layout_marginTop="5dp"
            app:counterEnabled="true"
            app:counterMaxLength="75"
            app:errorEnabled="true"
            >

            <EditText
                android:id="@+id/text_input_description"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/hint"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:id="@+id/birthdayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/date"
                android:textColorHint="@color/hint"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_button"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="20sp"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/female"
                android:textSize="20sp"
                />

        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            android:background="@color/purple_500"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tim_lytvynchuk_4_24_2021"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/HelloWorldText"
            />
    </LinearLayout>
</ScrollView>
