<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Frag1">

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/go_back"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon"
        android:contentDescription="@string/profile_pic" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/username"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/email"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="200dp"
            android:paddingEnd="10dp"
            android:text="@string/name"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="200dp"
            android:text="@string/Name"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:paddingTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="200dp"
            android:paddingEnd="10dp"
            android:text="@string/date_of_birth"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/text_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="200dp"
            android:text="@string/age"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:paddingTop="105dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="200dp"
            android:paddingEnd="10dp"
            android:text="@string/Occupation"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/text_occupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="200dp"
            android:text="@string/occupation"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:paddingTop="155dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="200dp"
            android:paddingEnd="10dp"
            android:text="@string/Description"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="200dp"
            android:text="@string/description"
            android:textSize="20sp"
            />
    </LinearLayout>
</FrameLayout>
